roles/micado-master/files/iptables/iptables.conf
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:FILTERS - [0:0]
:DOCKER-USER - [0:0]

-F INPUT
-F DOCKER-USER
-F FILTERS

-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type any -j ACCEPT
-A INPUT -j FILTERS

-A DOCKER-USER -j FILTERS

-A FILTERS -m state --state ESTABLISHED,RELATED -j ACCEPT

-A FILTERS -m state --state NEW -i lo -j ACCEPT
-A FILTERS -m state --state NEW -s 172.31.0.0/16  -j ACCEPT

-A FILTERS -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#zorp publication
-A FILTERS -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A FILTERS -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
#consul
-A FILTERS -m state --state NEW -m tcp -p tcp --dport 8300 -j ACCEPT
-A FILTERS -m state --state NEW -m tcp -p tcp --dport 8301 -j ACCEPT
-A FILTERS -m state --state NEW -m udp -p udp --dport 8301 -j ACCEPT
-A FILTERS -m state --state NEW -m tcp -p tcp --dport 8302 -j ACCEPT
-A FILTERS -m state --state NEW -m udp -p udp --dport 8302 -j ACCEPT
-A FILTERS -m state --state NEW -m tcp -p tcp --dport 8600 -j ACCEPT
-A FILTERS -m state --state NEW -m udp -p udp --dport 8600 -j ACCEPT

-A FILTERS -j LOG --log-prefix="FILTERS DROP: "
-A FILTERS -j REJECT --reject-with icmp-host-prohibited

COMMIT
